package ueb09.fz;

public interface Bremse {
	void bremsen();
	boolean brauchtService();
}
